@@ -1,10 +1,10 @@
 package com.worlabel.global.config;
 
-import com.worlabel.domain.auth.service.CustomOAuth2MemberService;
-import com.worlabel.domain.member.repository.MemberRepository;
-import com.worlabel.global.filter.JWTFilter;
+import com.worlabel.domain.auth.service.CustomOAuth2UserService;
+import com.worlabel.global.filter.JwtAuthenticationFilter;
+import com.worlabel.global.handler.CustomAuthenticationDeniedHandler;
+import com.worlabel.global.handler.CustomAuthenticationEntryPoint;
 import com.worlabel.global.handler.OAuth2SuccessHandler;
-import com.worlabel.global.util.JWTUtil;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
@@ -18,73 +18,81 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 @RequiredArgsConstructor
 public class SecurityConfig {
-
-    private final CustomOAuth2MemberService customOAuth2UserService;
+    private final CustomAuthenticationDeniedHandler authenticationDeniedHandler;
+    private final CustomAuthenticationEntryPoint authenticationEntryPoint;
+    private final JwtAuthenticationFilter jwtAuthenticationFilter;
+    private final CustomOAuth2UserService customOAuth2UserService;
     private final OAuth2SuccessHandler oAuth2SuccessHandler;
-    private final JWTUtil jwtUtil;
 
     @Value("${frontend.url}")
     private String frontend;
 
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http, MemberRepository memberRepository) throws Exception {
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
 
+        // HTTP Basic 인증 방식 비활성화
+        http.
+                httpBasic((auth) -> auth.disable());
         // CSRF 비활성화
         http
                 .csrf((auth) -> auth.disable());
-
-        // Form 로그인 방식 Disable
+        // Form 로그인 방식 비활성화
         http
                 .formLogin((auth) -> auth.disable());
 
-        // HTTP Basic 인증 방식 disable
-        http.
-                httpBasic((auth) -> auth.disable());
+        // 세션 설정 비활성화
+        http.sessionManagement((session)->session
+                .sessionCreationPolicy(SessionCreationPolicy.STATELESS));
 
-        // OAuth2
+        // CORS 설정
         http
-                .oauth2Login(oauth2 -> oauth2
-                        .authorizationEndpoint(authorizationEndpoint ->
-                                authorizationEndpoint.baseUri("/api/oauth2/authorization"))
-                        .redirectionEndpoint(redirectionEndpoint ->
-                                redirectionEndpoint.baseUri("/api/login/oauth2/code/*"))
-                        .userInfoEndpoint(userInfoEndpointConfig ->
-                                userInfoEndpointConfig.userService(customOAuth2UserService))
-                        .successHandler(oAuth2SuccessHandler)
-                );
+                .cors(configurer -> configurer.configurationSource(corsConfigurationSource()));
+
+        http
+                .exceptionHandling(configurer -> configurer
+                                .authenticationEntryPoint(authenticationEntryPoint)
+                                .accessDeniedHandler(authenticationDeniedHandler)
+                        );
 
 
         // 경로별 인가 작업
         http
-                .authorizeHttpRequests((auth)->auth
-                        .requestMatchers("/favicon.ico").permitAll()  // Allow access to favicon.ico
-                        .requestMatchers("/").permitAll()
+                .authorizeHttpRequests(auth->auth
+                        .requestMatchers("/api/**").authenticated()
                         .anyRequest().authenticated());
 
-        // 세션 설정: STATELESS
-        http.sessionManagement((session)->session
-                .sessionCreationPolicy(SessionCreationPolicy.STATELESS));
+        // OAuth2
+        http
+                .oauth2Login(oauth2 -> oauth2
+                        .authorizationEndpoint(authorization -> authorization.baseUri("/api/login/oauth2/authorization"))
+                        .redirectionEndpoint(redirection  -> redirection .baseUri("/api/login/oauth2/code/*"))
+                        .userInfoEndpoint(userInfo -> userInfo.userService(customOAuth2UserService))
+                        .successHandler(oAuth2SuccessHandler)
+                );
+
+
+
+    
 
         // JWT 필터 추가
         http
-                .addFilterAfter(new JWTFilter(jwtUtil, memberRepository), UsernamePasswordAuthenticationFilter.class);
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
         return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-
-        configuration.setAllowedOrigins(Collections.singletonList(frontend));  // 프론트엔드 URL 사용
-        configuration.setAllowedMethods(Collections.singletonList("*"));
         configuration.setAllowCredentials(true);
-        configuration.setAllowedHeaders(Collections.singletonList("*"));
+        configuration.setAllowedOrigins(List.of(frontend));  // 프론트엔드 URL 사용
+        configuration.setAllowedMethods(List.of("GET","POST","PUT","PATCH","DELETE","OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setMaxAge(3600L);
 
         configuration.addExposedHeader("Authorization");
@@ -93,6 +101,4 @@ public class SecurityConfig {
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
-
-
 }
